@@ -4,6 +4,7 @@
    - Added build command
    - Added '-k' option to the install command to keep built package
    - Removed CLEANUP configuration file option
+   - Added '-p' option to search command to print just package PRGNAMs
 
 0.2.2  2025-01-15
 
